--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+  <html>
+    <head>
+      <title>Page Title</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+  <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 
-</body>
+  </body>
 </html>
