--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </head>
   <body>
     <header>
-      <h1>Kristel Ann Foster</h1>
-      <h3>For TUSD Governing Board</h3>
+      <div class="center-block">
+        <h1>Kristel Ann Foster</h1>
+        <h3>For TUSD Governing Board</h3>
+      </div>
     </header>
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
