--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
    <div class="container-fluid">
      <div class="row">
-        <header>
+        <header class="center-block">
         
         <h1>Kristel Ann Foster</h1>
         <h3>For TUSD Governing Board</h3>
