--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
    <div class="container-fluid">
      <div class="row">
         <header class="col-md-12">
-        <img src="https://pbs.twimg.com/profile_images/699341139158048768/B58kiNfr.jpg" alt="Smiley face" height="42" width="42">
-        <h1>Kristel Ann Foster</h1>
-        <h3>For TUSD Governing Board</h3>
+        <img src="https://pbs.twimg.com/profile_images/699341139158048768/B58kiNfr.jpg" alt="Smiley face" height="42" width="42" class="col-md-3">
+        <h1 class="col-md-3">Kristel Ann Foster</h1>
+        <h3 class="col-md-3">For TUSD Governing Board</h3>
     
         </header>
      </div>
