--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="container-fluid">
      <div class="row">
         <header class="col-md-12">
-        <img src="https://pbs.twimg.com/profile_images/699341139158048768/B58kiNfr.jpg" class="img-rounded" alt="Responsive image">
+        <!-- <img src="https://pbs.twimg.com/profile_images/699341139158048768/B58kiNfr.jpg" class="img-rounded" alt="Responsive image"> -->
         <h1>Kristel Ann Foster</h1>
         <h3>For TUSD Governing Board</h3>
     
