--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      </div>
      <div class="container-fluid">
        <div class="row">
-         <section class="light-section">
+         <section class="light-section col-md-12">
            <p>I am a teacher and a public-education advocate completing my first term on the Tucson Unified Governing Board. 
            I am honored to bring an educator’s perspective to the decisions we make to move Tucson Unified forward. At the height of a very contentious time, 
            my win in 2012 helped transform district leadership and the direction the district was headed. I am proud of my work with Superintendent Dr. HT Sanchez and my fellow Board members, Cam Juarez and Adelita Grijalva. 
