--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
            I am committed to this organization, our strategic plan and seek re-election to assure its completion.</p>
            <p>When I first ran for office, three values centered my message and my work. And they still do...</p>
          </section>
-         <div class="dark-section>
+       </div>
+       <div class="row">
+        <div class="dark-section>
          <p class="col-md-4">Show me your budget and I’ll show you your priorities: We are more transparent than ever. We’ve won two awards for financial reporting and our monthly budget presentations are accessible to everyone online. With extreme budget cuts from the state, we have shifted resources and priorities to increase classroom spending by 4%. We’ve given three employee raises so far and I am working every day to do even more for teacher salaries.</p>
          <p class="col-md-4">It takes a village to raise a child: By collaborating with Mayor Rothschild, business leaders and community members, we developed an award winning strategic plan, brought 400 drops outs back to school, rolled up our sleeves and repaired dozens of buildings ourselves and traveled to Phoenix to advocate for public education. We are on track to achieving every goal within this 5 year plan and are working to build a public education alliance across the state to do better for our TUSD kids.</p>
          <p class="col-md-4">Good working conditions are good learning conditions: I advocated for teacher centered, site based professional development to bring more autonomy to the educators who know how to improve student achievement. We have more work to do with student behavior and must continue to work together to increase funding to refurbish and repair our property. Our students deserve 21st century facilities for 21st century learning.</p>
-       </div>
+        </div>
        </div>
        
     </div>
