--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     
         </header>
       </div>
-      <div class="row">
-         <section class="light-section col-md-12">
+      <div class="row light-section">
+         <div class="col-md-6">
            <p>I am a teacher and a public-education advocate completing my first term on the Tucson Unified Governing Board. 
            I am honored to bring an educator’s perspective to the decisions we make to move Tucson Unified forward. At the height of a very contentious time, 
            my win in 2012 helped transform district leadership and the direction the district was headed. I am proud of my work with Superintendent Dr. HT Sanchez and my fellow Board members, Cam Juarez and Adelita Grijalva. 
@@ -35,7 +35,7 @@
            We can’t stop and start over again right now! 
            I am committed to this organization, our strategic plan and seek re-election to assure its completion.</p>
            <p>When I first ran for office, three values centered my message and my work. And they still do...</p>
-         </section>
+         </div>
        </div>
        <div class="row dark-section">
        
