--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
            I am committed to this organization, our strategic plan and seek re-election to assure its completion.</p>
            <p>When I first ran for office, three values centered my message and my work. And they still do...</p>
          </div>
+         <div class="col-md-4">
+          <img src="" class="img-rounded" alt="Responsive image" height="100%" width="100%">
+        </div> 
        </div>
        <div class="row dark-section">
        
