--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <p>When I first ran for office, three values centered my message and my work. And they still do...</p>
          </div>
          <div class="col-md-4">
-          <img src="" class="img-rounded" alt="Responsive image" height="100%" width="100%">
+          <img src="foster-reading-again-e1456293408913-1.jpg" class="img-rounded" alt="Responsive image" height="100%" width="100%">
         </div> 
        </div>
        <div class="row dark-section">
