--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <div class = "dropdown">
    
-   <button type = "button" class = "btn dropdown-toggle" id = "dropdownMenu1" data-toggle = "dropdown">
+   <button type = "button" class = "btn btn-primary dropdown-toggle" id = "dropdownMenu1" data-toggle = "dropdown">
       <span class = "glyphicon glyphicon-menu-hamburger"></span>
    </button>
    
