--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           
           <div class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Action <span class="caret"></span>
+               <span class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
