--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        
           
           <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                <span class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
             <ul class="dropdown-menu">
