--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
            <img src="YouTube-icon-full_color.png" class="img-rounded social" alt="Responsive image" height="20%" width="20%">
          </div>
          <div class="col-md-6">
-           <button class="donate centered">Donate</button>
+           <button class="donate">Donate</button>
          </div>
        </div>
        <div class="row light-section">
