--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
            <img src="YouTube-icon-full_color.png" class="img-rounded social" alt="Responsive image" height="20%" width="20%">
            <img src="Twitter_Logo_White_On_Blue.png" class="img-rounded social" alt="Responsive image" height="20%" width="20%">
          </div>
-         <div class="col-md-6">
+         <div class="col-md-2">
+           <!-- SPACE -->
+         </div>
+         <div class="col-md-2">
            <button class="donate">Donate</button>
+         </div>
+         <div class="col-md-2">
+           <!-- SPACE -->
          </div>
        </div>
        <div class="row light-section">
