--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
        </div>
        <div class="row light-section">
          <div class="col-md-6">
-           <p style="margin-top:0;">If you believe in my ideas, follow me on social media and share this site with your friends!</p>
+           <p style="margin-top:-40px;">If you believe in my ideas, follow me on social media and share this site with your friends!</p>
            
          </div>
          <div class="col-md-6">
-           <p style="margin-top:0;">If you'd like to help me create a better school district, donate now! Any amount will help.</p>
+           <p style="margin-top:-40px;">If you'd like to help me create a better school district, donate now! Any amount will help.</p>
          </div>
          
        </div>
