--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
            <a href="https://www.facebook.com/Kristel-Ann-Foster-TUSD-Governing-Board-Member-276787602376421/"> 
             <img src="FB-f-Logo__blue_1024.png" class="img-rounded social" alt="Responsive image" height="20%" width="20%">
            </a>
-          <a href="#">
+          <a href="https://www.youtube.com/user/TUSDMedia">
             <img src="YouTube-icon-full_color.png" class="img-rounded social" alt="Responsive image" height="20%" width="20%">
           </a>
-          <a href="#">
+          <a href="https://twitter.com/FosterforTUSD">
             <img src="Twitter_Logo_White_On_Blue.png" class="img-rounded social" alt="Responsive image" height="20%" width="20%">
           </a>
            
