--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           
       <div class = "row light-section">
         <div class="col-md-8 col-md-offset-2">
-          <div class="col-md-4">
+          <div class="col-md-4 col-md-offset-2">
             <img src="foster-1-e1456291292191.jpg" class="img-rounded" alt="Responsive image" height="100%" width="100%">
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-md-offset-2">
             <img src="foster-reading-again-e1456293408913-1.jpg" class="img-rounded" alt="Responsive image" height="100%" width="100%">
           </div>
         </div>
