--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
           
       <div class = "row light-section">
         <div class="col-md-8 col-md-offset-2">
-          <div class="col-md-4 col-md-offset-2">
+          <div class="col-md-2">
             <img src="foster-1-e1456291292191.jpg" class="img-rounded" alt="Responsive image" height="100%" width="100%">
           </div>
-          <div class="col-md-4 col-md-offset-2">
+          <div class="col-md-6">
+            <p>I am a teacher and a public-education advocate completing my first term on the Tucson Unified Governing Board. 
+           I am honored to bring an educator’s perspective to the decisions we make to move Tucson Unified forward. At the height of a very contentious time, 
+           my win in 2012 helped transform district leadership and the direction the district was headed. I am proud of my work with Superintendent Dr. HT Sanchez and my fellow Board members, Cam Juarez and Adelita Grijalva. 
+           Together, we focus on the goals outlined in our community-created Five Year Strategic Plan. This collaboration, continuity, stability and articulated vision was missing for a long time in TUSD. 
+           We can’t stop and start over again right now! 
+           I am committed to this organization, our strategic plan and seek re-election to assure its completion.</p>
+           <p>When I first ran for office, three values centered my message and my work. And they still do...</p>
+          </div>
+          <div class="col-md-2">
             <img src="foster-reading-again-e1456293408913-1.jpg" class="img-rounded" alt="Responsive image" height="100%" width="100%">
           </div>
         </div>
