--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
           
       <div class = "row light-section">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 col-md-offset-2">
           <div class="col-md-2">
             <img src="foster-1-e1456291292191.jpg" class="img-rounded" alt="Responsive image" height="100%" width="100%">
           </div>
