--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <link rel="stylesheet" href="styles.css">
     </head>
   <body>
-   <div class="container-fluid">
+   <div class="container">
      <div class="row">
         <header class="col-md-12">
         <!-- <img src="https://pbs.twimg.com/profile_images/699341139158048768/B58kiNfr.jpg" class="img-rounded" alt="Responsive image"> -->
