--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         
         
           <div class="col-md-4">
-              <button>Home</button>
-              <button>Endorsements</button>
-              <button>Contact</button>
+              <button><a href="index.html">Home</a></button>
+              <button><a href="endorsements.html">Endorsements</a></button>
+              <button><a href="#">Contact</a></button>
           </div>
           <div class="col-md-4">
             <h1>Kristel Ann Foster</h1>
